
Infernal Dawn
* Rusila Dreadblade
** New: Added stop methods for Fist and Chains timers at the start of the final phase.
* Maelforge - Ember Eggs
** Change: Final Phase will now only Trigger after all Cannons have been destroyed.
* Maelforge - Final
** New: Add Tank-Swap for Melt Armor.
** New: Timer Added for First Hellfire in the Cannon phase.
** Fixed: Cannons now have an internal CastBar for associated Molten Blast alerts.

Translations
* French
** Fixed: Adjusted Phase 2 transition trigger to include escape code (%) for hyphen.
* German
** New: Updates to Twyl and Rusila.
* Taiwanese
** New: Added Dictionary support.
* Chinese
** New: Added Dictionary support.

----
v1.3.2

LibSBuff
* Change: Full Buff list calls on units changing to Availability. Full are now forced in to a post cache mode.
* Change: BuffUpdate no longer calls BuffAdd for full Buff lists. This Method will now queue the entire Buff list for processing.
* Fixed: Corrected BuffUpdate not checking against the correct active Buff Cache.
* Fixed: Corrected BuffClear not checking against the correct active Buff Cache.

Ready Check Available Tracking
* New: Added Razor Edge.

RezMaster
* Fixed: Scaling Rez Master with active timers should no longer throw errors.

Tank-Swap
* New: An option is available to only show Tank-Swap if you are Tanking.

Menus
* Fixed: Scrollable views will now clamp to the last item in the list, rather than add additional empty space.
* Fixed: List views will now align themselves with the scrollbar position after collapsing and expanding Menu items.
* Fixed: Collapsing a Menu item which then disables the Scrollbar will reset the view so all items are visible.
* Fixed: Introduced a check to ensure new Scrollbar positions fall within the excepted range.

Infernal Dawn
* Rusila Dreadblade
** New: Added Barbed Chains timer.
** New: Added Fists timer.
** Fixed: Left and Right Dreadshot death messages are now correctly linked to their options.

Translations